tests/baselines/reference/prettyContextNotDebugAssertion.errors.txt

[100;30m2[0m 
[100;30m [0m [91m[0m

tests/cases/compiler/index.ts(2,1): [91merror[0m TS1005: '}' expected.


==== tests/cases/compiler/index.ts (1 errors) ====
    if (true) {
    
    
!!! error TS1005: '}' expected.